# librecell

./: .gitignore  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
docs/: agent_prompt.md  api_reference.md  faq.md  getting_started.md  migration_guide.md  scripting_guide.md  spec.md  tech_config_guide.md
docs/tasks/: task01.md  task02.md  task03.md  task04.md  task05.md  task06.md  task07.md  task08.md  task09.md  task10.md
librecell-common/: setup.py
librecell-common/lccommon/: data_types.py  exceptions.py  layer_stack.py  logging_config.py  net_util.py  script_context.py  tech_config.py  tech_loader.py  tech_migration.py
librecell-common/librecell_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
librecell-layout/: setup.py
librecell-layout/examples/: bcd_cells.sp  bcd_tech.yaml  cmos_180nm.yaml  cmos_55nm.yaml  cmos_90nm.yaml  dummy_tech.yaml  dummy_tech_10t.yaml  dummy_tech_12t.yaml  dummy_tech_6t.yaml  dummy_tech_7t.yaml  dummy_tech_9t.yaml
librecell-layout/lclayout/: api.py  data_types.py  routing_graph.py  standalone.py  tech_util.py
librecell-lib/: setup.py
librecell-lib/librecell_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
librecell-meta/: setup.py
tests/: conftest.py  test_task01_conftest.py  test_task01_deps.py  test_task01_imports.py  test_task01_infrastructure.py
tests/e2e/: test_bcd.py  test_cmos_180nm.py  test_cmos_55nm.py  test_cmos_90nm.py  test_se_workflow.py  test_track_migration.py
tests/integration/: test_bcd_pipeline.py  test_characterization.py  test_dynamic_layers_pipeline.py  (+5 more)
(+50 files in other folders)
